--- a/public/dusoft_duana/sincronizacion/views/sincronizacionDocumentos/sincronizacionDocumentos.html
+++ b/public/dusoft_duana/sincronizacion/views/sincronizacionDocumentos/sincronizacionDocumentos.html
@@ -5,7 +5,21 @@
                 <div class="panel panel-primary">
                     <div class="panel-heading">Sincronizacion de Documentos</div>
                     <div class="panel-body" style="height: 500px;">
-                        <div class="row"> 
+                        <div class="row">
+                            <div class="col-md-12">
+                                <div class="form-group">
+                                    <label class="col-form-label">Servicios (Funciones)</label>
+                                    <ui-select ng-model="root.listarTiposServicios2"
+                                               theme="select2"
+                                               class="form-control selectgeneral pull-left col-md-4"
+                                               ng-change="servicio_actualizado($select.selected.id)">
+                                        <ui-select-match placeholder="Seleccionar Servicio">{{ $select.selected.descripcion}}</ui-select-match>
+                                        <ui-select-choices repeat="filtro in root.listarTiposServicios | filter:$select.search">
+                                            {{ filtro.descripcion }}
+                                        </ui-select-choices>
+                                    </ui-select>
+                                </div>
+                            </div>
                             <div class="col-md-12 col-lg-12">
                                 <div class="form-group">
                                     <label  class="col-form-label">Prefijo:</label>
