--- a/public/dusoft_duana/documentosbodegas/views/ASC1/modificarEntregado.html
+++ b/public/dusoft_duana/documentosbodegas/views/ASC1/modificarEntregado.html
@@ -40,6 +40,7 @@
                     <select class="form-control pull-left col-md-12" ng-model="productoSelec.aprobacion" required>
                         <option value="Orlando Caicedo">Orlando Caicedo</option>
                         <option value="Marisel Artunduaga">Marisel Artunduaga</option>
+                        <option value="German Torres">German Torres</option>
                     </select><br>
                 </div>
             </div>
