--- a/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
+++ b/public/dusoft_duana/planillasdespacho/views/generarplanilladespacho/gestionarplanillas.html
@@ -8,7 +8,7 @@
                             <h3 class="text-center"><strong>Logo</strong></h3>
                         </div>
                         <div class="pull-right">
-                            <h3 class="text-center"><strong>Guia # {{ planilla.get_numero_guia() }}</strong></h3>
+                            <h3 class="text-center"><strong>Guia # {{ planilla.get_numero_guia()}}</strong></h3>
                         </div>
                     </div>
                     <div class="panel-body">                    
@@ -19,9 +19,9 @@
                                     <legend>Ciudad</legend>      
 
                                     <ui-select ng-model="planilla.ciudad" ng-disabled="planilla.get_numero_guia() > 0" theme="select2" class="form-control selectgeneral pull-left" ng-change="seleccionar_ciudad()">
-                                        <ui-select-match  placeholder="Seleccionar ciudad">{{ $select.selected.get_nombre_ciudad() }}</ui-select-match>
+                                        <ui-select-match  placeholder="Seleccionar ciudad">{{ $select.selected.get_nombre_ciudad()}}</ui-select-match>
                                         <ui-select-choices refresh="listar_ciudades($select.search)" refresh-delay="0" repeat="ciudad in Empresa.get_ciudades() | filter:$select.search">
-                                            {{ ciudad.get_nombre_ciudad() }}
+                                            {{ ciudad.get_nombre_ciudad()}}
                                         </ui-select-choices>
                                     </ui-select>                                   
                                 </fieldset>
@@ -29,15 +29,27 @@
                             <div class="col-md-4">
                                 <div class="col-md-6">
                                     <fieldset>
-                                        <legend>Tranportador</legend> 
+                                        <legend>Transportador</legend> 
                                         <ui-select ng-model="planilla.transportadora" ng-disabled="planilla.get_numero_guia() > 0" theme="select2" class="form-control selectgeneral pull-left" ng-change="seleccionar_transportadora()">
-                                            <ui-select-match  placeholder="Seleccionar transportadora">{{ $select.selected.get_descripcion() }}</ui-select-match>
+                                            <ui-select-match  placeholder="Seleccionar transportadora">{{ $select.selected.get_descripcion()}}</ui-select-match>
                                             <ui-select-choices repeat="transportadora in Empresa.get_transportadoras() | filter:$select.search">
-                                                {{ transportadora.get_descripcion() }}
+                                                {{ transportadora.get_descripcion()}}
                                             </ui-select-choices>
                                         </ui-select>
                                     </fieldset>
                                 </div>
+                                <div class="col-md-6">
+                                    <fieldset>
+                                        <legend>Numero Placa</legend>                                 
+                                        <div class="row">  
+                                            <div class="col-md-12">                                          
+                                                <input type="text" ng-model="planilla.numero_placa_externo" ng-disabled="planilla.get_numero_guia() > 0 || planilla.get_transportadora() == undefined || planilla.get_transportadora().get_id() != '38'" class="form-control"  placeholder="Ingrese Numero Placa" name="" id="" />
+                                            </div>
+                                        </div>
+                                    </fieldset>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
                                 <div class="col-md-6">
                                     <fieldset>
                                         <legend>Numero Guia</legend>                                 
@@ -48,10 +60,6 @@
                                         </div>
                                     </fieldset>
                                 </div>
-
-
-                            </div>
-                            <div class="col-md-4">
                                 <fieldset>
                                     <legend>Fecha</legend> 
                                     <div class="row">
@@ -138,10 +146,10 @@
                                     <button class="btn btn-default" ng-click="cancelar_planilla_despacho()">
                                         <span class="glyphicon glyphicon-remove" ></span> Cancelar
                                     </button>
-                                    <button class="btn btn-default" ng-disabled="planilla.get_estado()=='0' || planilla.get_estado()=='1' || planilla.get_documentos().length === 0" ng-click="descargar_enviar_reporte()">
+                                    <button class="btn btn-default" ng-disabled="planilla.get_estado() == '0' || planilla.get_estado() == '1' || planilla.get_documentos().length === 0" ng-click="descargar_enviar_reporte()">
                                         <span class="glyphicon glyphicon-cog" ></span> Generar reporte
                                     </button>
-                                    <button class="btn btn-default" ng-disabled="planilla.get_estado()=='2' || planilla.get_documentos().length === 0" ng-click="confirmar_despacho_planilla()">
+                                    <button class="btn btn-default" ng-disabled="planilla.get_estado() == '2' || planilla.get_documentos().length === 0" ng-click="confirmar_despacho_planilla()">
                                         <span class="glyphicon glyphicon-ok" ></span> Despachar
                                     </button>
                                 </div>                            
