--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -60,15 +60,105 @@
     </div>    
 </div>
 <hr></hr>
-<div class="row">
-    <div class="col-md-2">
-        <h3>JasperServer</h3>  
-        <table class="table table-dark" style="margin-top: 2em !important;">
-            <tr>
-                <td><button type="button" class="btn btn-info" ng-click="inicio(1)">Estado</button></td>
-                <td><button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button></td>
-                <td><button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button></td>          
-            </tr> 
-        </table>
+<div class="panel panel-default">
+    <div class="panel-heading"><b>Server 216</b></div>
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h5><b>CPU</b></h5>
+                        <div class="row text-center">
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-info" ng-click="inicio(4)">Estado</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button> 
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <!--<div class="panel panel-default" >-->
+                                    <!--<div class="panel-body">-->
+                                        <textarea style="background: #000000; color: #ffff;" class="form-control  text-light bg-dark" rows="5" cols="550">{{item}}</textarea>                                   
+                                    <!--</div>-->
+                                <!--</div>-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h3>JasperServer</h3>
+                        <div class="row text-center">
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-info" ng-click="inicio(1)">Estado</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button> 
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <div class="panel panel-default" style="background: #000000; color: #ffff;">
+                                    <div class="panel-body">
+                                        <div  ng-repeat="item in respuesta">
+                                            <p class="text-light bg-dark" ng-if="item !== ''" > # {{item}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <h3>JasperServer</h3>
+                        <div class="row text-center">
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-info" ng-click="inicio(1)">Estado</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button>
+                            </div>
+                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
+                                <button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button> 
+                            </div>
+                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                            </div>
+                        </div>
+                        <br>
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <div class="panel panel-default" style="background: #000000; color: #ffff;">
+                                    <div class="panel-body">
+                                        <div  ng-repeat="item in respuesta">
+                                            <p class="text-light bg-dark" ng-if="item !== ''" > # {{item}}</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
