--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/validaciondespachos.html
@@ -94,7 +94,7 @@
                                             <span class="input-group-btn">
                                                 <button class="btn btn-default pull-right" 
                                                         title="Multiples EFC" 
-                                                        ng-disabled ="despachoId > 0"
+                                                        ng-disabled ="despachoId > 0 || datos_view.seleccionarOtros"
                                                         type="submit" 
                                                         ng-click ="ventanaMultiplesEFC()">
                                                     <i class="glyphicon glyphicon-new-window"></i>
