--- a/public/dusoft_duana/validaciondespachos/views/validaciondespachos/ventanaValidarEgresos.html
+++ b/public/dusoft_duana/validaciondespachos/views/validaciondespachos/ventanaValidarEgresos.html
@@ -13,7 +13,7 @@
                             <ui-select ng-model="datosView.centroUtilidad" 
                                        ng-disabled="" theme="select2" 
                                        class="form-control selectgeneral pull-left" 
-                                       ng-change="seleccionarCentroUtilidad($select.selected)"
+                                       ng-change="seleccionarCentroUtilidad($select.selected,'')"
                                        ng-show ="datosView.seleccionarClienteFarmacia" >
                                 <ui-select-match  placeholder="Seleccionar farmacia">{{ $select.selected.getNombre()}}</ui-select-match>
                                 <ui-select-choices ui-disable-choice="" 
@@ -27,7 +27,7 @@
                             <ui-select ng-model="datosView.centroUtilidad" 
                                        ng-disabled="" theme="select2" 
                                        class="form-control selectgeneral pull-left" 
-                                       ng-change="seleccionarCliente($select.selected)"
+                                       ng-change="seleccionarCliente($select.selected,'')"
                                        ng-show ="!datosView.seleccionarClienteFarmacia" >
                                 <ui-select-match  placeholder="Seleccionar cliente">{{ $select.selected.getNombre()}}</ui-select-match>
                                 <ui-select-choices ui-disable-choice="" 
@@ -54,9 +54,9 @@
                         <div class="panel panel-info ">
                             <div class="panel-body">
                                 <fieldset>
-                                     
-                                    <input type="checkbox" value="caja" ng-checked="numeroCaja" ng-click="pulsar($event.currentTarget.checked,'caja')"> Cajas <br>
-                                    <input type="checkbox" value="nevera" ng-checked="numeroNevera" ng-click="pulsar($event.currentTarget.checked,'nevera')"> Neveras 
+
+                                    <input type="checkbox" value="caja" ng-checked="numeroCaja" ng-click="pulsar($event.currentTarget.checked, 'caja')"> Cajas <br>
+                                    <input type="checkbox" value="nevera" ng-checked="numeroNevera" ng-click="pulsar($event.currentTarget.checked, 'nevera')"> Neveras 
                                     <div class="col-md-12">
                                         <div class="input-group">
                                             <span class="input-group-btn">
@@ -71,6 +71,15 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-5 pull-right" >
+                        <p class="input-group">
+
+                            <input type="text" class="form-control" ng-keypress="buscador_cliente_farmacia($event);"  ng-model="datosView.terminoBusquedaEfc" placeholder="Buscar" name="" id="" />
+                            <span class="input-group-btn">
+                                <button class="btn btn-default" type="submit" ng-click="buscador_cliente_farmacia({which:13})"><i class="glyphicon glyphicon-search"></i></button>
+                            </span>
+                        </p>
+                    </div>
                 </div>
 
             </div>                                                
@@ -83,7 +92,7 @@
         </div>
         <div class="modal-footer">    
             <button type="button" class="btn btn-warning" ng-click="cerrarVentana()">Cerrar</button>
-            <button type="button" class="btn btn-primary" ng-click="guardarDocumentosSeleccionados()">Guardar</button>
+            <button type="button" class="btn btn-primary" ng-disabled="(numeroNevera || numeroCaja)" ng-click="guardarDocumentosSeleccionados()">Guardar</button>
         </div>
     </div>
 </div> 
