--- a/public/dusoft_duana/sistema/views/sistema/dashboard.html
+++ b/public/dusoft_duana/sistema/views/sistema/dashboard.html
@@ -9,168 +9,92 @@
         margin-top: 2000px;
     }
 </style>
-<div class="row" ng-controller="SistemaController">   
-    <div class="col-md-8">
-        <h3>Memoria</h3>  
-        <span>Uso actual : {{memoria}}</span> 
-        <nvd3-line-chart
-            data="datosGrafico"
-            id="uso-memoria"
-            showXAxis="true"
-            showYAxis="true"
-            objectequality="true"
-            margin="{left:100,top:50,bottom:100,right:10}"
-            tooltips="true"
-            yAxisLabel="Memoria"
-            xAxisLabel="Tiempo"
-            width="900"
-            height="400">
-        </nvd3-line-chart>
-    </div>	
 
+<div class="row" ng-controller="SistemaController">
+    <div class="col-md-8">
+        <h3>Memoria</h3>
+        <span>Uso actual : {{memoria}}</span>
+        <nvd3-line-chart
+                data="datosGrafico"
+                id="uso-memoria"
+                showXAxis="true"
+                showYAxis="true"
+                objectequality="true"
+                margin="{left:100,top:50,bottom:100,right:10}"
+                tooltips="true"
+                yAxisLabel="Memoria"
+                xAxisLabel="Tiempo"
+                width="900"
+                height="400">
+        </nvd3-line-chart>
+    </div>
     <div class="col-md-4">
-        <h3>Peticiones</h3>  
-        <span>Promedio actual : {{promedioActual}}</span> 
+        <h3>Peticiones</h3>
+        <span>Promedio actual : {{promedioActual}}</span>
         <table class="table table-dark" style="margin-top: 2em !important;">
             <thead>
-                <tr>
-                    <th scope="col">Tiempo</th>
-                    <th scope="col">Promedio</th>
-                </tr>
+            <tr>
+                <th scope="col">Tiempo</th>
+                <th scope="col">Promedio</th>
+            </tr>
             </thead>
             <tbody>
-                <tr>
-                    <th scope="row">1 Minuto</th>
-                    <td>{{promedio1Min}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">5 Minutos</th>
-                    <td>{{promedio5Min}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">15 Minutos</th>
-                    <td>{{promedio15Min}}</td>
-                </tr>
-                <tr>
-                    <th scope="row">Total</th>
-                    <td>{{promedioTotal}}</td>
-                </tr>
+            <tr>
+                <th scope="row">1 Minuto</th>
+                <td>{{promedio1Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">5 Minutos</th>
+                <td>{{promedio5Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">15 Minutos</th>
+                <td>{{promedio15Min}}</td>
+            </tr>
+            <tr>
+                <th scope="row">Total</th>
+                <td>{{promedioTotal}}</td>
+            </tr>
             </tbody>
         </table>
-    </div>    
+    </div>
 </div>
-<hr></hr>
-<div class="panel panel-default">
-    <div class="panel-heading"><b>Server 216</b></div>
+<hr>
+<div class="panel panel-default" ng-repeat="server in monitoreo.servers track by $index">
+    <div class="panel-heading"><b style="font-size: 18px;">Server {{server}}</b></div>
     <div class="panel-body">
         <div class="row">
-<<<<<<< HEAD
             <div class="col-sm-12">
-                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" ng-repeat="modulo in monitoreo[server].modulos track by $index">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <h5><b>CPU</b></h5>
-                            <div class="row text-center">
-                                <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                    <button type="button" class="btn btn-info" ng-click="inicio(4)">Estado</button>
-                                </div>
-                                <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                    <button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button>
-                                </div>
-                                <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                    <button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button>
-                                </div>
-                                <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                                </div>
+                            <h5><b>{{monitoreo[server][modulo].title}}</b></h5>
+                            <div class="contenedor-modulos-btns">
+                                <button type="button" ng-disabled={{action.disable}} ng-repeat="action in monitoreo[server][modulo].actions track by $index" class={{action.class}} ng-click="sshConnection(modulo, action.name, server)">{{action.title}}</button>
                             </div>
                             <br>
                             <div class="row">
                                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                     <div class="col-sm-12 console-format">
-                                        <table class="tablePc">
-                                            <tr style="height: 20px;"><td colspan="7" style="text-align: center; padding-top: 0px; padding-bottom: 6px;" ng-if="memory.header[1]">Memoria Ram & Swap</td></tr>
+                                        <table class="tablePc" ng-repeat="obj in monitoreo[server][modulo].obj track by $index">  <!-- ng-repeat="(key, title) in modulo.obj track by $index" -->
+                                            <tr style="height: 20px;">
+                                                <td colspan="100%" style="text-align: center; padding-top: 0px; padding-bottom: 6px; ">
+                                                    {{obj.title}}
+                                                </td>
+                                            </tr>
                                             <tr>
-                                                <th class="header" ng-repeat="palabra in memory.header track by $index">{{palabra}} </th>
+                                                <th class="header" ng-repeat="head in obj.header">
+                                                    {{head}}
+                                                </th>
                                             </tr>
-                                            <tr ng-repeat="items in memory.rows track by $index">
-                                                <td ng-repeat="item in items track by $index">{{item}}</td>
-                                            </tr>
-                                            <tr style="height: 30px;"><td colspan="7" style="text-align: center; padding-top: 8px;" ng-if="hdd.header[1]">Disco Duro</td></tr>
-                                            <tr>
-                                                <th class="header" ng-repeat="palabra in hdd.header track by $index">{{palabra}} </th>
-                                            </tr>
-                                            <tr ng-repeat="items in hdd.rows track by $index">
-                                                <td ng-repeat="item in items track by $index">{{item}}</td>
+                                            <tr ng-repeat="items in obj.rows track by $index">
+                                                <td ng-repeat="item in items track by $index">
+                                                    {{item}}
+                                                </td>
                                             </tr>
                                         </table>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-         
-            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h5><b>JasperServer</b></h5>
-                        <div class="row text-center">
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-info" ng-click="inicio(1)">Estado</button>
-                            </div>
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-primary" ng-click="inicio(2)">Iniciar</button>
-                            </div>
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-danger" ng-click="inicio(3)">Detener</button> 
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                            </div>
-                            <br>
-                            <div class="row">
-                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                    <div class="panel panel-default" style="background: #000000; color: #ffff;">
-                                        <div class="panel-body">
-                                            <div  ng-repeat="item in respuesta">
-                                                <p class="text-light bg-dark" ng-if="item !== ''" > # {{item}}</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                <div class="panel panel-default">
-                    <div class="panel-body">
-                        <h3>PM2 - 229</h3>
-                        <div class="row text-center">
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-info" ng-click="inicio(5)">Estado</button>
-                            </div>
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-primary" ng-click="inicio(6)">Reload</button>
-                            </div>
-                            <div class="col-xs-2 col-sm-2 col-md-4 col-lg-4">
-                                <button type="button" class="btn btn-danger" ng-click="inicio(7)">Resurrect</button> 
-                            </div>
-                            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
-                            </div>
-                        </div>
-                        <br>
-                        <div class="row">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                                <textarea style="background: #000000; color: #ffffff;" class="form-control  text-light bg-dark" rows="5" cols="550">{{pm2}}</textarea>
-                                <!--<div class="panel panel-default" style="background: #000000; color: #ffff;">-->
-<!--                                    <div class="panel-body">
-                                        <div  ng-repeat="item in respuesta">
-                                            <p class="text-light bg-dark" ng-if="item !== ''" > # {{item}}</p>
-                                        </div>
-                                    </div>-->
-                                <!--</div>-->
                             </div>
                         </div>
                     </div>
